0.07
    - Fix: allow follow of a non-friend channel user
    - Nicks change when users' screen names change
    - Support for plugins
    - SquashWhiteSpace plugin
    - BangCommands plugin
    - SecondaryAccount plugin
    - Include META.yml in MANIFEST

0.06  2009-01-18
    - work around back compat bugs in Net::Twitter 2.00 and 2.01
    - fixed: display of incoming messages stopped after unfollow
    - trim trailing space from user input

0.05  2009-01-14
    - fixed topic setting: not on @replies, please
    - made verbose_refresh message optional
    - fixed: topic set twice (on post and on poll)

0.04  2009-01-13
    - added App::Twirc::Manual
    - added irc_server_bindaddr option (Sophie Hamilton)
    - added direct message checking
    - added rate_limit_status command
    - additional command feedback (rjbs, marcus)
    - Logging to channel &twirc-log
    - Twitter assigned source ID

0.03  2009-01-05
    - Released to CPAN
    - Renamed Net::Twitter::IRC to POE::Component::Server::Twirc
    - added backgrounding (--background)
    - temporarily work around JSON::Any fault on HTTP status 500
    - No logging by default; config option log_level for noise
    - Renamed twitirc.pl to twirc
    - Added check_replies and @replies merging
    - Use useragent_class in Net::Twitter 1.22
    - Added echo_posts option, defaults to 0
    - Net::Twitter 1.21 works around Twitter API fail on friendships/exists
    - error on messages longer than 140 characters
    - easy replies: "nick: ..." becomes "post @nick ..."

0.02_4  2008-12-16
	- disabled call to relationship_exists until fixed by Twitter or
	  Net::Twitter workaronud patch is applied

0.02_3  2008-12-16
    - give voice to existing followers on follow
    - Net::Twitter 1.20 fixes >100 followers

0.02_2  2008-12-15
    - fixed page param handling

0.02_1  2008-12-14
    - added support for >100 friends
    - added support for >100 followers (pending Net::Twitter patch)