@@ -1,4 +1,5 @@
 0.07
+    - Refactored Net::Twitter calls to workaround twitterapi and NT bugs
     - Fix: allow follow of a non-friend channel user
     - Nicks change when users' screen names change
     - Support for plugins
